--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,4 +26,5 @@ jobs:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST_DEV }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
         run: |
-          databricks workspace import_dir Notebooks /dev --overwrite
+          databricks workspace import_dir Notebooks /live --overwrite
+
