Update ci.yml to deploy in UAT

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
-name: CI - Check Notebooks
+name: CI - Check Notebooks and Deploy to UAT
 
 on:
   push:
-    branches: [main, feature/*]
+    branches:
+      - main
+      - feature/*
 
 jobs:
   check-notebooks:
@@ -19,3 +21,28 @@ jobs:
             echo "Notebook folder is missing"
             exit 1
           fi
+
+  deploy-uat:
+    name: Deploy to UAT Databricks Workspace
+    runs-on: ubuntu-latest
+    needs: check-notebooks  # Ensures deployment only after CI check passes
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: pip install databricks-cli
+
+      - name: Deploy notebooks to UAT
+        env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST_UAT }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_UAT }}
+        run: |
+          # Deploying notebooks to UAT Workspace
+          echo "Deploying notebooks to UAT Databricks Workspace"
+          databricks workspace import_dir Notebooks /live --overwrite
